--- a/add_staff.html
+++ b/add_staff.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&family=Tajawal:wght@200;300;400;500;800&display=swap"
         rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -63,13 +63,7 @@
                 </span>
 
             </div>
-            <div class="add">
 
-                <button>
-                    <i class="fa-solid fa-plus"></i>
-                    <a href="add_inv.html">Add Inventory</a>
-                </button>
-            </div>
             <div class="area cards">
                 <ul>
                     <li class="client">
@@ -86,61 +80,33 @@
                     </li>
                 </ul>
             </div>
-            <div class="area ">
-                <table>
-                    <thead>
-                        <tr>
-                            <td>#</td>
-                            <td>Type</td>
-                            <td>Amount</td>
-                            <td>Price</td>
-                            <td>Section</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5$</td>
-                            <td>Packaging</td>
-                        </tr>
-                        <tr>
-                            <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5$</td>
-                            <td>Packaging</td>
-                        </tr>
-                        <tr>
-                            <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5$</td>
-                            <td>Packaging</td>
-                        </tr>
-                        <tr>
-                            <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5$</td>
-                            <td>Packaging</td>
-                        </tr>
-                        <tr>
-                            <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5$</td>
-                            <td>Packaging</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="add_form">
+                <form action="">
+                    <span>
+                        Name : <input type="text">
+                        ID Num : <input type="text">
+                        Section : <input type="text">
+                        Salary : <input type="text">
+                        DOB : <input type="text">
+                        Phone Num : <input type="text">
+                        Email Adress : <input type="text">
+                        Nationality : <input type="text">
+                        <!-- Customer Email : <input type="text"> -->
+                        <!-- Order Type : <input type="text"> -->
+                        <!-- Quntity : <input type="text"> -->
+                        Type of Work : <input type="text">
+                        Salary : <input type="text">
+                        Joined From : <input type="text">
+                        Description : <br> <textarea class="txt" name="txtname" rows="4" cols="50" maxlength="200">
+                            </textarea>
+                    </span>
+                    <div class="submit-btn">
+                        <button>Submit</button>
+                    </div>
+                </form>
             </div>
-        </div>
-    </div>
-    <script src="script.js"></script>
+            <script src="script.js"></script>
 </body>
 
 </html>
-
-<!-- 170 -->
+<!--99-->
