--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,9 @@
     <div class="page">
         <div class="sidebar open">
             <div class="admin">Admin</div>
+            <!-- <div class="myimg">
+                <img src="img/Aurus.jpeg" alt="">
+            </div> -->
             <ul>
                 <a href="dashboard.html">
                     <li><i class="fa-solid fa-chart-column"></i> DashBoard</li>
