--- a/staff.html
+++ b/staff.html
@@ -66,7 +66,7 @@
 
                 <button>
                     <i class="fa-solid fa-plus"></i>
-                    <a href="add.html">Add Staff</a>
+                    <a href="add_staff.html">Add Staff</a>
                 </button>
             </div>
             <div class="area cards">
